Added a few examples

--- a/01_intro_to_python.ipynb
+++ b/01_intro_to_python.ipynb
@@ -185,15 +185,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5e4fe058",
+   "metadata": {},
+   "source": [
+    "#### **RUNNING THE CELL BELOW WILL RETURN AN ERROR**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "cffbfaaf",
    "metadata": {},
    "outputs": [],
    "source": [
-    "1stperson = \"Amanda\" # Bad variable name starts with a number\n",
-    "first-name = \"Amanda\" # Bad variable name contains a hyphen\n",
-    "first name = \"Amanda\" # Bad variable name contains a space\n",
+    "1stperson = \"Amanda\" # Bad variable name; it starts with a number\n",
+    "first-name = \"Amanda\" # Bad variable name; it contains a hyphen\n",
+    "first name = \"Amanda\" # Bad variable name; it contains a space\n",
+    "a = \"Amanda\" # Bad variable name; it's not descriptive\n",
     "\n",
     "# Good variable names\n",
     "firstName = \"Amanda\"\n",
@@ -266,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "5f9be79a",
    "metadata": {},
    "outputs": [],
@@ -294,10 +303,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "inconsistent_string = \"Hi there'\n",
+    "\n",
     "# using a string with an apostrophe\n",
     "sentence = \"Amanda's cat is very cute.\"\n",
     "\n",
-    "# This wouldn't work\n",
+    "# These wouldn't work\n",
     "bad_sentence = 'Amanda's cat is very cute.'\n",
     "\n",
     "# to make it work with single quotes, we have to use \\\n",
@@ -315,10 +326,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "8c0ea3fb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, Python World!\n",
+      "  hello, python world!  \n",
+      "  HELLO, PYTHON WORLD!  \n",
+      "  Hello, Jupyter World!  \n",
+      "True\n",
+      "True\n",
+      "16\n",
+      "3\n",
+      "['  Hello', ' Python World!  ']\n",
+      "Hello, Python World!\n"
+     ]
+    }
+   ],
    "source": [
     "# Demonstrating various string methods\n",
     "sample_text = \"  Hello, Python World!  \"\n",
@@ -668,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "111fd18b",
    "metadata": {},
    "outputs": [],
@@ -1031,7 +1059,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "6068914b",
    "metadata": {},
    "outputs": [],
@@ -1076,7 +1104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "57d40af1",
    "metadata": {},
    "outputs": [
@@ -1094,7 +1122,8 @@
     "print(dir(info))\n",
     "\n",
     "\n",
-    "print(dir(my_list))"
+    "print(dir(my_list))\n",
+    "#ignore the methods that have underscores "
    ]
   },
   {
