--- a/01_intro_to_python.ipynb
+++ b/01_intro_to_python.ipynb
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "5f9be79a",
    "metadata": {},
    "outputs": [],
@@ -436,13 +436,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "25a7bf43",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Hello, Amanda.'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "greeting = f\"Hello, {name}.\"\n",
     "greeting"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e7f569a3",
+   "metadata": {},
+   "source": [
+    "#### Exercises\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ca2dee07",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# store your name in a variable as a string\n",
+    "\n",
+    "# print it in uppercase\n",
+    "\n",
+    "# print it in title case\n",
+    "\n",
+    "# print it in lower case\n",
+    "\n",
+    "# use a string method to count how many times the letter 'a' appears in \"Data Analysis\"\n",
+    "\n",
+    "# combine the following statements using string concatenation\n",
+    "first_part = \"Well done on completing this\"\n",
+    "second_part = \"You're doing great!\"\n",
+    "# don't forget to punctuate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fc1f3342",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# store your first name, last name, age, and occupation in variables\n",
+    "# using f-strings, print a sentence that looks like this:\n",
+    "# My name is Amanda, I am 23-years old, and I am a student."
    ]
   },
   {
@@ -572,6 +626,28 @@
   },
   {
    "cell_type": "markdown",
+   "id": "24d17689",
+   "metadata": {},
+   "source": [
+    "#### Exercises"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b9d0378e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# convert this to a float\n",
+    "int_1 = 12\n",
+    "\n",
+    "# convert this to an integer\n",
+    "float_1 = 23.4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "3df238ea",
    "metadata": {},
    "source": [
@@ -696,7 +772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "111fd18b",
    "metadata": {},
    "outputs": [],
@@ -1043,6 +1119,26 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9f6cea44",
+   "metadata": {},
+   "source": [
+    "#### Exercises"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "871f6109",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create a list of random numbers and use a list method to sort it in descending order\n",
+    "\n",
+    "# remove the 2nd item on the list (remember the zero indexing) using a list method"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "d9b43627",
    "metadata": {},
    "source": [
@@ -1124,6 +1220,26 @@
     "\n",
     "print(dir(my_list))\n",
     "#ignore the methods that have underscores "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5278daf8",
+   "metadata": {},
+   "source": [
+    "#### Exercises"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "294f5110",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create a tuple of three fruit\n",
+    "\n",
+    "# using negative indexing, print out the last item"
    ]
   },
   {
@@ -1270,6 +1386,28 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9c1cc78b",
+   "metadata": {},
+   "source": [
+    "#### Exercises"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3d45e579",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create a dictionary with name, age, and country.\n",
+    "\n",
+    "# access and update one value using its index\n",
+    "\n",
+    "# delete a value from the dictionary"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "8a1b5915",
    "metadata": {},
    "source": [
@@ -1382,6 +1520,26 @@
     "\n",
     "fruits_e = fruits_a.difference(fruits_b)\n",
     "fruits_f = fruits_b.difference(fruits_a)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "afe88869",
+   "metadata": {},
+   "source": [
+    "#### Exercises"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6a17d986",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create a set with some random numbers (repeat a few numbers to see what happens)\n",
+    "\n",
+    "# create another set of random numbers and find the union, intersection, and difference between the two sets"
    ]
   },
   {
