--- a/02_intro_to_conditional_statements.ipynb
+++ b/02_intro_to_conditional_statements.ipynb
@@ -480,6 +480,34 @@
     "else:\n",
     "    print(\"Jujutsu Kaisen 0 is not available for streaming.\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0a7bb5ec",
+   "metadata": {},
+   "source": [
+    "#### Exercises"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "06c196a8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Write a program that checks if a number is positive, negative, or zero.\n",
+    "\n",
+    "# Write a program that asks for a password and confirm password — print “Match” only if both are non-empty and equal. (use logical operators)\n",
+    "\n",
+    "# Write a program that asks for a letter and check if it’s in the word \"Python\". (use special operators)\n",
+    "\n",
+    "# Write a program that checks if a score ≥ 50 → print “Pass”, else “Fail”.\n",
+    "\n",
+    "# Write a program that asks for a username and password; if username == “admin”, then check if password == “1234”.\n",
+    "\n",
+    "# Create a list of numbers and print only the even ones with an if statement."
+   ]
   }
  ],
  "metadata": {
