--- a/03_intro_to_loops.ipynb
+++ b/03_intro_to_loops.ipynb
@@ -1154,6 +1154,34 @@
     "# If 5 were in the list, the break would stop the loop\n",
     "# and skip the else."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d9a074b5",
+   "metadata": {},
+   "source": [
+    "#### Exercises"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fda11ea1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# write a program that asks a user for two numbers (one at a time) and print their sum.\n",
+    "\n",
+    "# write a program that asks a user for a word and print each letter on a new line.\n",
+    "\n",
+    "# Print even numbers between 1 and 20 using a while loop.\n",
+    "\n",
+    "# Print all letters in a word except vowels.\n",
+    "\n",
+    "# Loop through a list of names and stop when you find \"John\".\n",
+    "\n",
+    "# Using a list comprehension, from a list of numbers, make a new list containing only the even ones."
+   ]
   }
  ],
  "metadata": {
