--- a/04_intro_to_functions.ipynb
+++ b/04_intro_to_functions.ipynb
@@ -713,6 +713,48 @@
   },
   {
    "cell_type": "markdown",
+   "id": "63b164b3",
+   "metadata": {},
+   "source": [
+    "Let's build a function that does more than greet.\n",
+    "\n",
+    "Our function will be used to make pizzas using size and a list of toppings."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "a77ced4f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Making a 12-inch pizza with the following toppings:\n",
+      "- pepperoni\n",
+      "- mushrooms\n",
+      "- green peppers\n",
+      "Your pizza is ready!\n"
+     ]
+    }
+   ],
+   "source": [
+    "def makepizza(size, toppings: list[str]):\n",
+    "    \"\"\"This function makes a pizza of a given size with specified toppings\"\"\"\n",
+    "    print(f\"Making a {size}-inch pizza with the following toppings:\")\n",
+    "    for topping in toppings:\n",
+    "        print(f\"- {topping}\")\n",
+    "    print(\"Your pizza is ready!\")\n",
+    "\n",
+    "    # adding list[str] is a \"type hint\" indicating that toppings should be a list of strings\n",
+    "\n",
+    "    # Example usage:\n",
+    "makepizza(12, [\"pepperoni\", \"mushrooms\", \"green peppers\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "b66b661a",
    "metadata": {},
    "source": [
@@ -723,6 +765,14 @@
    "cell_type": "markdown",
    "id": "59b8e93b",
    "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6794c57f",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
