"Deleted some files"

--- a/04_intro_to_functions.ipynb
+++ b/04_intro_to_functions.ipynb
@@ -755,6 +755,100 @@
   },
   {
    "cell_type": "markdown",
+   "id": "fc410709",
+   "metadata": {},
+   "source": [
+    "#### Using Functions to Update Lists"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "53a49e44",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Printing model: robots\n",
+      "Printing model: spaceships\n",
+      "Printing model: cats\n",
+      "The following models have been printed:\n",
+      "robots\n",
+      "spaceships\n",
+      "cats\n"
+     ]
+    }
+   ],
+   "source": [
+    "designs = ['cats', 'spaceships', 'robots']\n",
+    "completed_designs = []\n",
+    "\n",
+    "def print_designs(designs: list[str], completed_designs: list[str]):\n",
+    "    \"\"\"Simulate printing each design, until none are left.\n",
+    "    Move each design to completed_designs after printing.\"\"\"\n",
+    "    while designs:\n",
+    "        current_design = designs.pop()\n",
+    "        print(f\"Printing model: {current_design}\")\n",
+    "        completed_designs.append(current_design)\n",
+    "\n",
+    "def show_completed_designs(completed_designs: list[str]):\n",
+    "    \"\"\"Show all the models that were printed.\"\"\"\n",
+    "    print(\"The following models have been printed:\")\n",
+    "    for completed_design in completed_designs:\n",
+    "        print(completed_design)\n",
+    "\n",
+    "print_designs(designs, completed_designs)\n",
+    "show_completed_designs(completed_designs)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "63daeac2",
+   "metadata": {},
+   "source": [
+    "#### Preventing a Function from Modifying a List"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e5b1f2a0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_designs = ['drones', 'cars', 'trucks']\n",
+    "\n",
+    "print_designs(new_designs[:], completed_designs)  # pass a copy of the list"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c6e8ddf7",
+   "metadata": {},
+   "source": [
+    "#### **Type Hinting and Using Keyword Arguments**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "70931599",
+   "metadata": {},
+   "source": [
+    "##### **Required and Default Arguments**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "42776265",
+   "metadata": {},
+   "source": [
+    "#### **```*args and **kwargs```**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "b66b661a",
    "metadata": {},
    "source": [
