Added Exercises to functions notebook

--- a/04_intro_to_functions.ipynb
+++ b/04_intro_to_functions.ipynb
@@ -812,6 +812,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "71e5a2ef",
+   "metadata": {},
+   "source": [
+    "Sometimes, you'd want a function to use a list without changing its content. In the last example, we passed the designs list to the print_designs function and it removed a value from that list and appended it to the completed_designs list, leaving the designs list empty. It do not want to leave that list empty, we can use 'designs[:]' and the designs list will be copied and that copy is what will be used by the function."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "e5b1f2a0",
@@ -833,10 +841,69 @@
   },
   {
    "cell_type": "markdown",
-   "id": "70931599",
+   "id": "5f7f7d21",
    "metadata": {},
    "source": [
-    "##### **Required and Default Arguments**"
+    "**Type hinting** in Python is a way to show what type of data a variable, function parameter, or return value should have.\n",
+    "\n",
+    "It doesn’t affect how the code runs, it just helps you catch mistakes early.\n",
+    "\n",
+    "It’s just a hint, not a strict rule. Python won’t throw an error if you pass something else.\n",
+    "\n",
+    "**Keyword Arguements** let you pass values to a function by naming the parameter instead of relying on position.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8595c062",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'model': 'Model S', 'horsepower': 670, 'color': 'black'}\n",
+      "{'model': 'GLS650', 'horsepower': 630, 'color': 'white'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "def build_car(model: str, horsepower: int, color: str = 'black') -> dict:\n",
+    "    \"\"\"Build a car with the given specifications.\"\"\"\n",
+    "    car = {\n",
+    "        'model': model,\n",
+    "        'horsepower': horsepower,\n",
+    "        'color': color\n",
+    "    }\n",
+    "    return car\n",
+    "\n",
+    "old_car = build_car('Model S', 670)\n",
+    "print(old_car)\n",
+    "new_car = build_car(model='GLS650', horsepower=630, color='white')\n",
+    "print(new_car)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1e529506",
+   "metadata": {},
+   "source": [
+    "In the above function, we specified the data types that the arguments should carry and the one the function should return\n",
+    "\n",
+    "model: str indicates that the user should provide a string for the model argument\n",
+    "\n",
+    "horsepower: int hints that the user needs to provide an integer.\n",
+    "\n",
+    "def build_car(...) -> dict indicates that the function is to return a dictionary\n",
+    "\n",
+    "For the color parameter, we didn't just specify that the colour argument should be a string, we also specified a default value for the argument.\n",
+    "\n",
+    "That is why when we called bulid_car in old_car without providing any argument for the colour, it used the defauls set (black)\n",
+    "\n",
+    "I used positional arguments for old_car. That is, I supplied argeuments based on the position of the parameter. In the build car function, the first parameter is model, so I put 'Model S' as the first argument when I called build_car, and so on.\n",
+    "\n",
+    "But with new car, I used Keyword arguments like, model = 'GLS650', instead of relying on the position that the parameters are in."
    ]
   },
   {
@@ -845,6 +912,133 @@
    "metadata": {},
    "source": [
     "#### **```*args and **kwargs```**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5643f4f5",
+   "metadata": {},
+   "source": [
+    "*args and **kwargs let your function accept any number of arguments.\n",
+    "\n",
+    "*args collects extra positional arguments into a tuple.\n",
+    "\n",
+    "**kwargs collects extra keyword arguments into a dictionary.\n",
+    "\n",
+    "They’re useful when you don’t know in advance how many arguments a function will receive."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "e4a60f94",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Positional: ('apple', 'banana')\n",
+      "Keyword: {'color': 'red', 'size': 'medium'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "def show_info(*args, **kwargs):\n",
+    "    print(\"Positional:\", args)\n",
+    "    print(\"Keyword:\", kwargs)\n",
+    "\n",
+    "show_info(\"apple\", \"banana\", color=\"red\", size=\"medium\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "991f6fe4",
+   "metadata": {},
+   "source": [
+    "#### **Scope**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "67caf04c",
+   "metadata": {},
+   "source": [
+    "Scope is about where a variable can be seen or used in your code.\n",
+    "\n",
+    "In Python, there are four main scopes (the LEGB rule):\n",
+    "\n",
+    " - L – Local: Inside a function.\n",
+    "\n",
+    " - E – Enclosing: In an outer function (for nested functions).\n",
+    "\n",
+    " - G – Global: At the top level of the script or module.\n",
+    "\n",
+    " - B – Built-in: Python’s own names like len, print, etc\n",
+    "\n",
+    "Each function first looks for a variable in its local scope, then enclosing, then global, then built-in — in that order."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "91f1ec8b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10 20 30\n",
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 10  # global scope\n",
+    "\n",
+    "def outer():\n",
+    "    y = 20  # enclosing scope\n",
+    "    def inner():\n",
+    "        z = 30  # local scope\n",
+    "        print(x, y, z)\n",
+    "    inner()\n",
+    "\n",
+    "outer()\n",
+    "print(x)  # can access global scope\n",
+    "# print(y)  # would raise an error"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2680d383",
+   "metadata": {},
+   "source": [
+    "#### Exercises"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "38009c73",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a function introduce(name, age=18) that prints a sentence using both arguments. Call it once with one argument and once with two.\n",
+    "\n",
+    "# Write a function square(num) that returns the square of a number.Print the result.\n",
+    "\n",
+    "# Write a function math_ops(a, b) that returns their sum, difference, and product.\n",
+    "\n",
+    "# Write a function describe_person(name, age, city) and call it using keyword arguments in a different order.\n",
+    "\n",
+    "# Write a function total_sum(*numbers) that takes any number of numeric arguments and returns their sum. (*args)\n",
+    "\n",
+    "# Write a function print_info(**info) that prints out key-value pairs passed into it. (**kwargs)\n",
+    "\n",
+    "# Define a global variable x = 5. Then make a function that tries to change x inside it and print both inside and outside the function to see the effect.\n",
+    "\n",
+    "# Write a function that filters even numbers using a comprehension instead of a loop."
    ]
   },
   {
