Added notes on importing libraries

--- a/04_intro_to_functions.ipynb
+++ b/04_intro_to_functions.ipynb
@@ -1051,16 +1051,157 @@
   },
   {
    "cell_type": "markdown",
-   "id": "59b8e93b",
+   "id": "58bcc8e4",
    "metadata": {},
-   "source": []
+   "source": [
+    "Did you notice that when we were discussing math operations a few operations, like squareroot, were missing. This is because python has a *standard library* that you have to import to use some functions. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "3a9189fe",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "from math import sqrt\n",
+    "x = 16\n",
+    "print(sqrt(x))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4fb23e9a",
+   "metadata": {},
+   "source": [
+    "*Why not just build everything into the python core?*\n",
+    "\n",
+    "Good question.\n",
+    "\n",
+    "Python keeps its core small on purpose. If everything were built in, it would:\n",
+    " - Make Python slower to load and run.\n",
+    " - Make the language bloated — full of tools most people would never use.\n",
+    " - Be harder to maintain since every update would affect a massive codebase.\n",
+    "\n",
+    "So instead, Python gives you a standard library (common stuff like math, datetime, random, etc.) and lets you import extra modules only when you need them.\n",
+    "\n",
+    "A module is just a Python file (.py) that contains code, like functions, variables, or classes, that you can use in another program.\n",
+    "\n",
+    "You import it to reuse code instead of rewriting it.\n",
+    "\n",
+    "You can also create your own module, we'll do that a little later.\n",
+    "\n",
+    "You can find the full list of python libraries [here](https://docs.python.org/3/library/index.html)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6794c57f",
+   "id": "4dfaf901",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "# using import to import the whole math module\n",
+    "import math\n",
+    "\n",
+    "# using from to import specific functions\n",
+    "from math import sqrt\n",
+    "from math import sin, cos, tan\n",
+    "\n",
+    "# using aliasing to avoid name conflicts\n",
+    "from math import sqrt as square_root\n",
+    "import math as m\n",
+    "\n",
+    "# using wildcard to import all functions (not recommended)\n",
+    "from math import *"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d39bd0c3",
+   "metadata": {},
+   "source": [
+    "Importing all the functions in a module causes problems like:\n",
+    "\n",
+    " 1. Name clashes – if your code has a function with the same name as one in the module, it’ll get overwritten.\n",
+    "\n",
+    " 2. Confusion – you won’t know where a function came from just by looking at your code.\n",
+    "\n",
+    " 3. Performance – it loads a lot of stuff you might not need.\n",
+    "\n",
+    "It’s better to import only what you need."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "22e607de",
+   "metadata": {},
+   "source": [
+    "#### library vs module vs packages\n",
+    "\n",
+    "Module → a single Python file (.py) that contains code (functions, classes, variables).\n",
+    "Example: math.py\n",
+    "\n",
+    "Package → a collection (folder) of modules grouped together, with a special ```__init__.py``` file inside.\n",
+    "Example: numpy is a package made up of many modules.\n",
+    "\n",
+    "Library → a broader term that can mean a collection of related packages or modules meant to solve certain problems.\n",
+    "Example: Pandas is a library that contains multiple modules and packages for data handling."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "28a9770d",
+   "metadata": {},
+   "source": [
+    "#### Storing Your Functions in Modules\n",
+    "Functions help organize your code by separating small tasks from the main program, making it easier to read and manage. You can store these functions in a module and import them when needed. This keeps your main program simple, hides unnecessary details, and allows you to reuse the same functions in multiple projects. It also lets you access powerful libraries written by other programmers without rewriting their code."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "de96e139",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### TRY\n",
+    "\n",
+    "# Store the build_car function we created earlier in a module named car_module.py. \n",
+    "# Create a separate Python file\n",
+    "# import this module and use the build_car function to create a car dictionary. \n",
+    "# Print the resulting dictionary to verify that the function works correctly when imported from the module."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "59b8e93b",
+   "metadata": {},
+   "source": [
+    "### **Classes**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1658114f",
+   "metadata": {},
+   "source": [
+    "#### Object-oriented programming\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b303f59c",
+   "metadata": {},
    "source": []
   }
  ],
