Added notes on oop

--- a/04_intro_to_functions.ipynb
+++ b/04_intro_to_functions.ipynb
@@ -1194,15 +1194,431 @@
    "id": "1658114f",
    "metadata": {},
    "source": [
-    "#### Object-oriented programming\n",
-    "\n"
+    "#### Object-Oriented Programming\n",
+    "\n",
+    "Object-oriented programming (OOP) is astyle of programming that is centered around objects rather than functions. \n",
+    "\n",
+    "An object allows us to store data as well as the functions that manipulates them in a single unit.\n",
+    "\n",
+    "OOP helps programmers create complex programs by grouping together related data and functions.\n",
+    "\n",
+    "Instead of just writing functions and variables everywhere, OOP helps you organize code into reusable blueprints called classes, from which you can create objects.\n",
+    "\n",
+    "A class serves as a template for an object; an object is an instance of a class."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "b303f59c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# let's create a class for mammals\n",
+    "# This class will be a blueprint for various mammal objects\n",
+    "\n",
+    "class Mammal:\n",
+    "    def __init__(self, live_birth, fur, no_legs):\n",
+    "        self.live_birth = live_birth\n",
+    "        self.fur = fur\n",
+    "        self.no_legs = no_legs        "
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "b303f59c",
+   "id": "a6ce38ae",
    "metadata": {},
-   "source": []
+   "source": [
+    "We create the mammal class by using the class key word\n",
+    "\n",
+    "The ```__init__()``` method is a special function in Python classes that runs automatically when you create a new object. It’s used to initialize the object basically to set up its starting values. \n",
+    "\n",
+    "In our class above, ```__init__``` gives each mammal object its own attribute of live_birth, fur, and no_legs.\n",
+    "\n",
+    "self represents the current object of a class and is used to access its attributes and methods. It keeps track of which instance is which.\n",
+    "\n",
+    "Note that the name of a class always starts with a capital letter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "4b5512b4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# let's make an instance of mammal\n",
+    "\n",
+    "dog = Mammal(True, True, 4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2d159bba",
+   "metadata": {},
+   "source": [
+    "We've created a dog object which is a mammal that gives birth to live babies, has fur, and has four legs.\n",
+    "\n",
+    "Classes don't just have attributes. They also have methods.\n",
+    "\n",
+    "A method is basically a function that belongs to an object (like a string, list, or class)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "0c4488a8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# let's create a method for our mammal\n",
+    "\n",
+    "class Mammal:\n",
+    "    def __init__(self, live_birth, fur, no_legs):\n",
+    "        self.live_birth = live_birth\n",
+    "        self.fur = fur\n",
+    "        self.no_legs = no_legs  \n",
+    "\n",
+    "    def run(self):\n",
+    "        if self.no_legs == 4:\n",
+    "            print(\"This mammal runs on all 4s\")\n",
+    "        else:\n",
+    "            print(\"This mammal runs on two legs\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "062a5bf3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This mammal runs on two legs\n"
+     ]
+    }
+   ],
+   "source": [
+    "# let's see how this method works on an object\n",
+    "\n",
+    "man = Mammal(True, False, 2)\n",
+    "man.run()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "855fecb8",
+   "metadata": {},
+   "source": [
+    "OOP and Classes are very broad topics and so I can not go in-depth here but here are some key terminologies to note:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "89591794",
+   "metadata": {},
+   "source": [
+    "##### Encapsulation\n",
+    "Encapsulation means keeping data and methods that work on that data together in one place (a class), and hiding the internal details from the outside."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "90c47481",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Counter:\n",
+    "    def __init__(self):\n",
+    "        self.__value = 0  # Private attribute (hidden)\n",
+    "    def increment(self):\n",
+    "        self.__value += 1\n",
+    "    def get_value(self):\n",
+    "        return self.__value"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2f6c69e6",
+   "metadata": {},
+   "source": [
+    "Key Point: You change the counter only with increment(), not by editing __value directly."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f7d9b1ca",
+   "metadata": {},
+   "source": [
+    "##### Inheritance\n",
+    "Inheritance lets one class (child) use code from another class (parent)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "37f3de9c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# single inheritance\n",
+    "\n",
+    "class Animal:\n",
+    "    def speak(self):\n",
+    "        print(\"Makes sound\")\n",
+    "class Dog(Animal):\n",
+    "    pass\n",
+    "\n",
+    "Dog().speak()  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "948b20f5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# multiple inheritance\n",
+    "\n",
+    "class A:\n",
+    "    def show(self): print(\"A\")\n",
+    "class B:\n",
+    "    def show(self): print(\"B\")\n",
+    "class C(A, B):\n",
+    "    pass\n",
+    "C().show()  \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "39593c7b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# multilevel inheritance \n",
+    "\n",
+    "class Grandparent:\n",
+    "    pass\n",
+    "class Parent(Grandparent):\n",
+    "    pass\n",
+    "class Child(Parent):\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0a9834ab",
+   "metadata": {},
+   "source": [
+    "##### Access Modifiers\n",
+    "\n",
+    "These control whether a variable or method can be used outside the class. Python uses naming conventions:\n",
+    "\n",
+    "- public_var (no underscore): can be accessed anywhere.\n",
+    "\n",
+    "- _protected_var (single underscore): should not be accessed outside the class, but can be (just a warning).\n",
+    "\n",
+    "- __private_var (double underscore): cannot be accessed from outside directly (name-mangled)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "521a755a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Demo:\n",
+    "    def __init__(self):\n",
+    "        self.public = 1\n",
+    "        self._protected = 2\n",
+    "        self.__private = 3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ade31bdf",
+   "metadata": {},
+   "source": [
+    "##### Polymorphism\n",
+    "Using a common method name, but different classes can do different things with it. Often helps make code generic."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1a1cf755",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Cat:\n",
+    "    def sound(self): print(\"Meow!\")\n",
+    "class Dog:\n",
+    "    def sound(self): print(\"Woof!\")\n",
+    "\n",
+    "for animal in [Cat(), Dog()]:\n",
+    "    animal.sound()  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6d2ff551",
+   "metadata": {},
+   "source": [
+    "Key Point: The exact class decides what happens, not the variable type."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "04b795f3",
+   "metadata": {},
+   "source": [
+    "##### Abstraction\n",
+    "Hiding the complex details and showing only what’s needed. Usually with an abstract base class (interface)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "00c93327",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from abc import ABC, abstractmethod\n",
+    "class Shape(ABC):\n",
+    "    @abstractmethod\n",
+    "    def area(self):\n",
+    "        pass\n",
+    "class Square(Shape):\n",
+    "    def __init__(self, side):\n",
+    "        self.side = side\n",
+    "    def area(self):\n",
+    "        return self.side * self.side"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3070e597",
+   "metadata": {},
+   "source": [
+    "##### Duck Typing\n",
+    "In Python, if an object does what's needed (has the right method), it's good enough, even if it's a different type.\n",
+    "\n",
+    "\"If it quacks like a duck, it is a duck.\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "234e081e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Duck:\n",
+    "    def quack(self):\n",
+    "        print(\"Quack!\")\n",
+    "class Person:\n",
+    "    def quack(self):\n",
+    "        print(\"Person imitates a duck!\")\n",
+    "\n",
+    "def make_quack(thing):\n",
+    "    thing.quack()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "50626476",
+   "metadata": {},
+   "source": [
+    "##### Operator Overload\n",
+    "You can change what built-in operators (+, -, etc.) do for your class."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "45e92f8d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Point:\n",
+    "    def __init__(self, x, y):\n",
+    "        self.x = x\n",
+    "        self.y = y\n",
+    "    def __add__(self, other):\n",
+    "        return Point(self.x + other.x, self.y + other.y)\n",
+    "\n",
+    "p1 = Point(1, 2)\n",
+    "p2 = Point(3, 4)\n",
+    "p3 = p1 + p2  # This uses __add__"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "99a5e302",
+   "metadata": {},
+   "source": [
+    "##### Method Overriding\n",
+    "When a child class replaces a method of its parent with its own version."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1cca7bc6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Parent:\n",
+    "    def greet(self):\n",
+    "        print(\"Hello from Parent!\")\n",
+    "\n",
+    "class Child(Parent):\n",
+    "    def greet(self):\n",
+    "        print(\"Hello from Child!\")\n",
+    "\n",
+    "Parent().greet()  # Hello from Parent!\n",
+    "Child().greet()   # Hello from Child!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f641ef24",
+   "metadata": {},
+   "source": [
+    "#### Exercises"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4532cba8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a class Car with attributes make and model.\n",
+    "\n",
+    "# Create two objects and print their attributes.\n",
+    "\n",
+    "# Add a method description() to Car that prints “This car is a {make} {model}.”\n",
+    "\n",
+    "# Call it on both objects.\n",
+    "\n",
+    "# Make model a private attribute (__model).\n",
+    "\n",
+    "# Add a method get_model() to access it.\n",
+    "\n",
+    "# Create a class ElectricCar that inherits from Car.\n",
+    "\n",
+    "# Add an attribute battery_size.\n",
+    "\n",
+    "# Create an object of ElectricCar and print its make, model, and battery size.\n"
+   ]
   }
  ],
  "metadata": {
